# CUDA_code

code/algorithms/: README.md  build_all.sh
code/algorithms/FFT/: CMakeLists.txt  fft_kernels.cuh  main.cu  test_fft.cu
code/algorithms/SpMV/: CMakeLists.txt  main.cu  spmv_kernels.cuh  test_spmv.cu
code/algorithms/attention/: CMakeLists.txt  attention_kernels.cuh  main.cu  test_attention.cu
code/algorithms/common/: analysis.cuh  bandwidth.cuh  cli.cuh  harness.cuh  metrics.cuh  occupancy.cuh  pool.cuh  raii.cuh  variant.cuh  verify.cuh
code/algorithms/convolution/: CMakeLists.txt  convolution_kernels.cuh  main.cu  test_convolution.cu
code/algorithms/debug/: CMakeLists.txt  conditional_hunt.cu  cuda_gdb_tour.cu  oob_fault.cu  race_bug.cu  sync_deadlock.cu  watchpoint_corrupt.cu
code/algorithms/histogram/: CMakeLists.txt  histogram_kernels.cuh  histogram_metric.cuh  histogram_registry.cuh  main.cu  test_histogram.cu
code/algorithms/matmul/: CMakeLists.txt  main.cu  matmul_kernels.cuh  test_matmul.cu
code/algorithms/pitfalls/: CMakeLists.txt  algo_traps.cu  pitfalls_bench.cu
code/algorithms/practice/: CMakeLists.txt  README.md
code/algorithms/practice/matmul/: baseline.cu  solution.cu
code/algorithms/practice/nbody/: baseline.cu  solution.cu
code/algorithms/practice/reduction/: baseline.cu  solution.cu
code/algorithms/reduction/: CMakeLists.txt  README.md  analyze.cu  main.cu  reduction_kernels.cuh  reduction_metric.cuh  reduction_registry.cuh  test_reduction.cu
code/algorithms/scan/: CMakeLists.txt  README.md  analyze.cu  gds_demo.cu  main.cu  pool_bench.cu  scan_kernels.cuh  scan_metric.cuh  scan_registry.cuh  stream_bench.cu  test_scan.cu  unified_bench.cu
code/algorithms/softmax/: CMakeLists.txt  main.cu  softmax_kernels.cuh  test_softmax.cu
code/algorithms/sort/: CMakeLists.txt  main.cu  quicksort_dp.cu  sort_kernels.cuh  sort_metric.cuh  sort_registry.cuh  test_sort.cu
code/algorithms/tma/: CMakeLists.txt  tma_demo.cu
